minor fixes and alignments

--- a/css/index.scss
+++ b/css/index.scss
@@ -1,6 +1,7 @@
 $active-color: #f65063;
 $inactive-color: #3c3c3c;
 $nav-color: #f5f5f5;
+$main-text-color: #ffffff;
 
 body {
   margin: 0px;
@@ -8,7 +9,7 @@ body {
 
   header {
     background: linear-gradient(rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.70)), url("../img/header.jpg");
-    color: white;
+    color: $main-text-color;
     padding: 10px 0;
 
     .header-content {
@@ -27,14 +28,14 @@ body {
           border-bottom: 2px solid $active-color;
           padding: 15px 13px;
           background-color: black;
-          color: white;
+          color: $main-text-color;
           font-size: 15px;
           background: content("↵");
         }
         span {
           flex-grow: 0;
           background-color: black;
-          color: white;
+          color: $main-text-color;
           padding: 15px 13px;
           border: none;
           font-size: 15px;
@@ -46,17 +47,18 @@ body {
         margin: 40px 0;
 
         .header-content__search-customization{
-          margin: 10px 0px;
+          margin-top: 20px;
           display: flex;
   
           .header-content__search-btn{
             margin-left: auto;
   
             input[type=submit]{
-              color: white;
+              color: $main-text-color;
               background-color: $active-color;
               border: none;
-              padding: 3px 10px;
+              font-size: 15px;
+              padding: 10px 40px;
             }
           }
   
@@ -68,7 +70,7 @@ body {
   
           label {
             background-color: $inactive-color;
-            padding: 3px 10px;
+            padding: 5px 30px;
             margin: 0px 10px;
             cursor: pointer;
           }
